[package]
name = "cnctd_smart_home"
version = "0.1.4"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "A collection of Smart Home APIs"
repository = "https://github.com/Connected-Dot/cnctd_smart_home"
license = "MIT"
keywords = ["module"]

[lib]
name = "cnctd_smart_home"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
govee-api = "1.3.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tplinker = "0.4.4"

